fixed alignment of details text

--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -61,7 +61,7 @@ a:hover {
 
 .details-text {
   margin-left: 18px;
-  /* width: 34vw; */
+  width: 30vw;
   float: left;
 }
 
